# crvusd-arbitrage-analytics

./: .gitignore  README.md  pyproject.toml
crvusd_arbitrage_analytics/: crvusd_analytics.py  tokenflow.py  utils.py
crvusd_arbitrage_analytics/analytics/: arbitrage_statistics.py  detailed_trades.py  detailed_trades_statistics.py  get_liquidations.py  get_trades.py  match_action.py  match_action_group.py  sort_trades.py
crvusd_arbitrage_analytics/collector/: TokenBalanceDiff.py
crvusd_arbitrage_analytics/config/: address.py  constance.py  diagram_config.py  filename_config.py  pitayasmoothie-dark.mplstyle  tokenflow_category.py
crvusd_arbitrage_analytics/flowchart/: edge.py  generate_flowchart.py  node.py  process_graph.py
crvusd_arbitrage_analytics/network/: http.py
crvusd_arbitrage_analytics/utils/: date.py  match.py  utils.py
data/: action_types.csv  detailed_trades_data.csv  detailed_trades_tokenflow_data.csv  detailed_trades_tokenflow_data.json
results/csv/: action_types_sFrxETH.csv  action_types_wstETH.csv  arbi_types_WBTC.csv  arbi_types_WETH.csv  arbi_types_sFrxETH.csv  arbi_types_wstETH.csv  detailed_trades_data_sFrxETH.csv  detailed_trades_data_wstETH.csv  detailed_trades_tokenflow_data_sFrxETH.csv  detailed_trades_tokenflow_data_wstETH.csv  tokenflow_data_WBTC.csv  tokenflow_data_WETH.csv  tokenflow_data_sFrxETH.csv  (+1 more)
scripts/: 0_fetch_data.py  0_load_data.py  1_wash_data.py  2_sort_data.py  3_draw_graph.py  3_statistics_data.py  4_draw_diagram.py  4_price_data.py  4_statistics_data.py  5_statistics_summary.py  sort_trades_type.py  trades_data.py
(+20 files in other folders)
